!commit! Update on 周五-2025-08 01:17

--- a/source/_posts/组合两个表.md
+++ b/source/_posts/组合两个表.md
@@ -4,11 +4,15 @@
 
 考虑到可能不是每个人都有地址信息，我们应该使用 outer join 而不是默认的 inner join。
 
-MySQL
+
+```sql
 select FirstName, LastName, City, State
 from Person left join Address
 on Person.PersonId = Address.PersonId
 ;
+```
+
+
 
 作者：LeetCode
 链接：https://leetcode.cn/problems/combine-two-tables/solutions/3573/zu-he-liang-ge-biao-by-leetcode/
